# AIAgentOSalt

./: .replit  app.py  creative_workflow.db  oauth_fixes_summary.py  oauth_test_validation.py  pyproject.toml  replit.md
agents/: analytics_estimator.py  asset_validator.py  branding_generator.py  client_portal_assistant.py  content_plan_generator.py  creative_brief_parser.py  deliverables_packager.py  meeting_notes_processor.py  proposal_generator.py  sentiment_analyzer.py  taskboard_generator.py  workflow_optimizer.py
attached_assets/: AI Agents Details_1757111601991.txt  AI Agents Details_1757455665302.txt  Pasted-Errors-1-ModuleNotFoundError-No-module-named-plotly-Traceback-File-home-runner-workspace--1757456601576_1757456601577.txt  Pasted-Here-is-the-thing-about-the-Creative-Workflow-AI-OS-I-am-currently-working-on-As-we-can-see-1-O-1757455640485_1757455640485.txt
core/: agent_orchestrator.py  base_agent.py  database.py
modules/: __init__.py
modules/closed_loop_learning/: __init__.py  brand_memory.py  feedback_collector.py  learning_engine.py  outcome_tracker.py
modules/integrations/: __init__.py  oauth_manager.py  security_manager.py  service_connectors.py
pages/: 10_📦_Deliverables.py  11_📈_Analytics.py  12_⚡_Workflow_Optimizer.py  13_🧠_Learning_Intelligence.py  14_🔗_Integrations.py  1_🤖_Agent_Dashboard.py  2_📝_Meeting_Notes.py  3_📋_Creative_Brief.py  4_📊_Project_Management.py  5_🎨_Branding.py  6_📄_Proposals.py  7_📝_Content_Planning.py  8_✅_Quality_Assurance.py  9_👥_Client_Portal.py
utils/: ai_client.py  config.py  integrations.py
