[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.33.0",
    "notion-client>=2.5.0",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "slack-sdk>=3.36.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
